--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,8 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 18px;
 	text-transform: uppercase;
+	background: url(../img/bg.jpg) no-repeat center center fixed;
+	background-size: cover;
 }
 
 main {
