--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,8 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 18px;
 	text-transform: uppercase;
+	background: url(../img/bg2.jpg) center center;
+	background-size: cover;
 }
 
 main {
@@ -17,7 +19,7 @@ main {
 
 table {
 	border-collapse: collapse;
-
+	background-color: #d7ab69;
 }
 
 td {
