--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 18px;
 	text-transform: uppercase;
-	background: url(../img/bg2.jpg) center center;
+	background: url(../img/bg.jpg) center center;
 	background-size: cover;
 }
 
@@ -19,7 +19,7 @@ main {
 
 table {
 	border-collapse: collapse;
-	background-color: #d7ab69;
+	background-color: rgba(254, 202, 137, 0.7);
 }
 
 td {
@@ -66,12 +66,12 @@ a {
 	text-decoration: none;
 	letter-spacing: 6px;
 	border: 2px solid rgb(255, 66, 29);
-	color: #FF421D;
+	color: #fff;
 	transition: 0.5s;
 	overflow: hidden;
   }
   a:hover {
-	color: #fff;
+	color: #FF421D;
   }
   a span {
 	position: absolute;
@@ -82,34 +82,34 @@ a {
 	z-index: -1;
   }
   a span:nth-child(1) {
-	top: -100%;
-	left: -100%;
+	top: 0;
+	left: 0;
   }
   a:hover span:nth-child(1) {
-	top: 0;
-	left: 0;
+	top: -100%;
+	left: -100%;
   }
   a span:nth-child(2) {
+	bottom: 0;
+	left: 0;
+  }
+  a:hover span:nth-child(2) {
 	bottom: -100%;
 	left: -100%;
   }
-  a:hover span:nth-child(2) {
-	bottom: 0;
-	left: 0;
-  }
   a span:nth-child(3) {
-	top: -100%;
-	right: -100%;
-  }
-  a:hover span:nth-child(3) {
 	top: 0;
 	right: 0;
   }
-  a span:nth-child(4) {
-	bottom: -100%;
+  a:hover span:nth-child(3) {
+	top: -100%;
 	right: -100%;
   }
-  a:hover span:nth-child(4) {
+  a span:nth-child(4) {
 	bottom: 0;
 	right: 0;
+  }
+  a:hover span:nth-child(4) {
+	bottom: -100%;
+	right: -100%;
   }
