--- a/style/style.css
+++ b/style/style.css
@@ -2,15 +2,24 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 18px;
 	text-transform: uppercase;
-	background: url(../img/bg.jpg) center center no-repeat;
+	background: url(../img/bg.jpg) no-repeat center center fixed;
 	background-size: cover;
 }
 
 main {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
 }
 
 .board {
@@ -20,7 +29,7 @@ main {
 table {
 	border-collapse: collapse;
 	background-color: rgba(254, 202, 137, 0.7);
-	cursor: url('../img/aim2.cur'), default; 
+	cursor: url('../img/aim2.cur'), default;
 }
 
 td {
@@ -40,22 +49,25 @@ ul {
 }
 
 .list {
-  display: flex;
-  justify-content: space-between;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 }
 
 .hit {
-	background-image: url('../img/fire.svg'); 
+	background-image: url('../img/fire.svg');
 }
 
-
 .miss {
-	background-image: url('../img/cross.svg'); 
+	background-image: url('../img/cross.svg');
 	background-size: 20px;
 }
 
 .dead {
-	background-image: url('../img/skull.svg'); 
+	background-image: url('../img/skull.svg');
 }
 
 a {
@@ -68,49 +80,63 @@ a {
 	letter-spacing: 6px;
 	border: 2px solid rgb(255, 66, 29);
 	color: #fff;
+	-webkit-transition: 0.5s;
+	-o-transition: 0.5s;
 	transition: 0.5s;
 	overflow: hidden;
-  }
-  a:hover {
+}
+
+a:hover {
 	color: #FF421D;
-  }
-  a span {
+}
+
+a span {
 	position: absolute;
 	width: 100%;
 	height: 100%;
 	background: rgba(255, 66, 29, 0.5);
+	-webkit-transition: 0.5s;
+	-o-transition: 0.5s;
 	transition: 0.5s;
 	z-index: -1;
-  }
-  a span:nth-child(1) {
+}
+
+a span:nth-child(1) {
 	top: 0;
 	left: 0;
-  }
-  a:hover span:nth-child(1) {
+}
+
+a:hover span:nth-child(1) {
 	top: -100%;
 	left: -100%;
-  }
-  a span:nth-child(2) {
+}
+
+a span:nth-child(2) {
 	bottom: 0;
 	left: 0;
-  }
-  a:hover span:nth-child(2) {
+}
+
+a:hover span:nth-child(2) {
 	bottom: -100%;
 	left: -100%;
-  }
-  a span:nth-child(3) {
+}
+
+a span:nth-child(3) {
 	top: 0;
 	right: 0;
-  }
-  a:hover span:nth-child(3) {
+}
+
+a:hover span:nth-child(3) {
 	top: -100%;
 	right: -100%;
-  }
-  a span:nth-child(4) {
+}
+
+a span:nth-child(4) {
 	bottom: 0;
 	right: 0;
-  }
-  a:hover span:nth-child(4) {
+}
+
+a:hover span:nth-child(4) {
 	bottom: -100%;
 	right: -100%;
-  }
+}
